# deep-researcher-agents-openai-sdk

./: .env.example  .gitignore  README.md  cruise_finder.py  demo_launcher.py  domain_launcher.py  email_agent.py  job_finder.py  planner_agent.py  pyproject.toml  requirements.txt  research_manager.py  writer_agent.py
apps/: cruise_finder.py  deep_research.py  demo_launcher.py  job_finder.py
domains/: cruise_config.py  job_config.py
src/deep_researcher/: __init__.py
src/deep_researcher/agents/: __init__.py  search_agent.py
src/deep_researcher/core/: __init__.py  domain_launcher.py  research_manager.py
src/deep_researcher/domains/: __init__.py
